# r2SMT

./: .editorconfig  Cargo.toml  README.md  SPEC.md  deny.toml  rustfmt.toml  tarpaulin.toml
.github/workflows/: ci.yml  quality-gates.yml  release.yml
.planning/: bug3-nonexec-blocks.md  phase4-pcode-spike.md
.planning/clean-code-loop/: STATE.md
crates/r2smt-cli/: Cargo.toml
crates/r2smt-cli/src/: args.rs  commands.rs  main.rs  render.rs  support.rs
crates/r2smt-cli/src/commands/: batch.rs  inspect.rs  patch.rs
crates/r2smt-cli/tests/: batch_smoke.rs
crates/r2smt-common/: Cargo.toml
crates/r2smt-common/src/: error.rs  lib.rs  smt.rs  types.rs
crates/r2smt-core/: Cargo.toml
crates/r2smt-core/src/: analyzer.rs  consensus.rs  dump.rs  finding.rs  lib.rs  prepare.rs
crates/r2smt-core/src/finding/: tests.rs
crates/r2smt-core/tests/: consensus_contracts.rs  memory_contracts.rs
crates/r2smt-difflift/: Cargo.toml
crates/r2smt-difflift/src/: equiv.rs  lib.rs  lower.rs
crates/r2smt-difflift/tests/: equivalence_contracts.rs
crates/r2smt-esil/: Cargo.toml
crates/r2smt-esil/src/: flags.rs  lib.rs  machine.rs  parse.rs
crates/r2smt-esil/src/machine/: tests.rs
crates/r2smt-ir/: Cargo.toml
crates/r2smt-ir/src/: annotator.rs  byte_patcher.rs  decompiler.rs  expr.rs  lib.rs  name_hints.rs  program.rs  provider.rs  simplify.rs  stmt.rs  testing.rs
crates/r2smt-patch/: Cargo.toml
crates/r2smt-patch/src/: aarch64_encoding.rs  apply.rs  arm_encoding.rs  digest.rs  lib.rs  manifest.rs  plan.rs  x86_encoding.rs
crates/r2smt-patch/src/plan/: aarch64.rs  tests.rs
crates/r2smt-pcode/: Cargo.toml
crates/r2smt-pcode/src/: lib.rs  machine.rs  parse.rs
crates/r2smt-r2pipe/: Cargo.toml
crates/r2smt-r2pipe/src/: b64.rs  lib.rs  parse.rs  provider.rs
crates/r2smt-r2pipe/src/parse/: info.rs  sections.rs  tests.rs
crates/r2smt-r2pipe/tests/: r2_smoke.rs
crates/r2smt-report/: Cargo.toml
crates/r2smt-report/src/: batch_report.rs  lib.rs  patch_suggestion.rs  report.rs
crates/r2smt-slicer/: Cargo.toml
crates/r2smt-slicer/src/: collector.rs  condition.rs  effect.rs  lib.rs  lift.rs  registers.rs  slice.rs
crates/r2smt-slicer/src/effect/: aarch32.rs  aarch64.rs  tests.rs  x86.rs
crates/r2smt-slicer/src/lift/: aarch32.rs  aarch64.rs  merge.rs  tests.rs  x86.rs
crates/r2smt-slicer/src/registers/: aarch32.rs  aarch64.rs  tests.rs  x86.rs
crates/r2smt-slicer/src/slice/: merge_detect.rs  tests.rs
crates/r2smt-smt/: Cargo.toml
crates/r2smt-smt/src/: adapter.rs  bitwuzla.rs  cvc5.rs  encoder.rs  lib.rs  pretty.rs  smtlib.rs  solver.rs
crates/r2smt-smt/src/solver/: tests.rs
crates/r2smt-solver-port/: Cargo.toml
crates/r2smt-solver-port/src/: lib.rs
crates/r2smt-ssa/: Cargo.toml
crates/r2smt-ssa/src/: convert.rs  lib.rs  optimize.rs  pretty.rs
r2pm/: README.md  r2smt.mk  r2smt.r2
scripts/: quality-gates.sh  r2smt-playground.yar
