[package]
name         = "r2smt-common"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
description = "Foundation primitives, error types, and shared DTOs for the r2SMT workspace."

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
serde     = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
