[package]
name         = "r2smt-core"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
description = "Orchestration use cases for r2SMT — coordinates providers, slicers, lifters, and the SMT backend."

[lints]
workspace = true

[dependencies]
r2smt-common = { workspace = true }
r2smt-ir     = { workspace = true }
r2smt-slicer = { workspace = true }
r2smt-ssa    = { workspace = true }
serde        = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
r2smt-ir = { workspace = true, features = ["testing"] }
r2smt-smt = { workspace = true }
serde_json = { workspace = true }
