[package]
name = "r2smt-pcode"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Ghidra/SLEIGH P-code lifter for r2SMT — emits IrStmt from radare2 `pdgsd` P-code text."

[dependencies]
r2smt-common = { workspace = true }
r2smt-ir     = { workspace = true }

[lints]
workspace = true
