[package]
name         = "r2smt-slicer"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
description = "Branch collector and (forthcoming) backward slicer for r2SMT."

[lints]
workspace = true

[dependencies]
r2smt-common = { workspace = true }
r2smt-esil   = { workspace = true }
r2smt-pcode  = { workspace = true }
r2smt-ir     = { workspace = true }
serde        = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
r2smt-ir   = { workspace = true, features = ["testing"] }
serde_json = { workspace = true }
